--- a/src/components/CourseCard/CourseCard.scss
+++ b/src/components/CourseCard/CourseCard.scss
@@ -44,13 +44,15 @@
     transition: filter var(--transition-duration) ease-in-out;
   }
 
-  @include hover {
-    .course-card__description {
-      max-height: 500px;
-      opacity: 1;
-    }
-    .course-card__image {
-      filter: blur(5px) brightness(0.7);
+  @include tablet-above {
+    @include hover {
+      .course-card__description {
+        max-height: 500px;
+        opacity: 1;
+      }
+      .course-card__image {
+        filter: blur(5px) brightness(0.7);
+      }
     }
   }
 }
