--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -6,10 +6,10 @@
   row-gap: 15px;
 
   @include mobile {
-    position: absolute;
+    position: fixed;
     padding: 20px;
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     inset: 0;
     background-color: var(--color-white);
     z-index: 1000;
@@ -23,10 +23,6 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
-  }
-
-  &__close-button {
-    background-color: var(--color-grey-02);
   }
 
   &__subcategories {
@@ -45,7 +41,7 @@
     position: relative;
     display: inline-flex;
     border-radius: var(--border-radius-xl);
-    background-color: var(--color-grey-02);
+    background-color: var(--color-grey);
     padding: fluid-to-laptop(15, 10);
 
     @include mobile {
@@ -60,7 +56,7 @@
     }
 
     @include hover {
-      background-color: var(--color-grey);
+      background-color: var(--color-grey-02);
     }
 
     input {
@@ -148,15 +144,19 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
-
-    &:not(.is-active) {
-      display: none !important;
-    }
   }
 
-  &__user-button {
-    &--cancel {
+  &__button {
+    &--cancel,
+    &--close {
       background-color: var(--color-grey-02);
+    }
+
+    &--cancel,
+    &--apply {
+      &:not(.is-active) {
+        display: none !important;
+      }
     }
   }
 }
