--- a/src/components/Tabs/components/TabsNavigation/TabsNavigation.scss
+++ b/src/components/Tabs/components/TabsNavigation/TabsNavigation.scss
@@ -49,7 +49,7 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          background-color: var(--color-grey-02);
+          background-color: var(--color-grey);
           border-radius: var(--border-radius-xl);
         }
       }
