--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -3,7 +3,6 @@
     --gap: 20px;
 
     display: grid;
-
     grid-template-columns: 2fr 1fr;
     column-gap: var(--gap);
 
@@ -58,7 +57,7 @@
       height: 300px;
     }
 
-    background-color: var(--color-grey-02);
+    background-color: var(--color-grey);
     border-radius: var(--border-radius-l);
 
     &__swiper {
