--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,8 +4,8 @@
 
   --color-black-02: #232529;
 
-  --color-grey: #e0e0e0;
-  --color-grey-02: rgba(187, 187, 187, 0.1);
+  --color-grey: rgba(187, 187, 187, 0.1);
+  --color-grey-02: rgba(187, 187, 187, 0.3);
   --color-grey-03: #f5f5f5;
   --color-grey-04: rgb(44, 44, 44);
 
