Fixes images and icons

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -23,9 +23,10 @@
 
   &--circle {
     border-radius: 50%;
-    padding: fluid-to-laptop(10, 5);
+    padding: 5px;
   }
 }
+
 .burger-button {
   @include mobile {
     span {
