--- a/src/components/LinkCard/LinkCard.scss
+++ b/src/components/LinkCard/LinkCard.scss
@@ -1,23 +1,13 @@
 .link-card {
   position: relative;
   border-radius: var(--border-radius-l);
+  background-color: var(--color-accent-02);
   flex-grow: 1;
   overflow: hidden;
 
-  &__subtitle {
-    font-weight: 500;
-  }
-
-  &__description {
-    transition: max-height var(--transition-duration-m) ease-in-out,
-      opacity var(--transition-duration-m) ease-in-out;
-    max-height: 0;
-    opacity: 0;
-  }
-
   &__body {
     z-index: var(--z-index-under-background);
-    padding: 20px;
+    padding: fluid-to-laptop(20, 10);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -33,11 +23,19 @@
       filter var(--transition-duration) ease-in-out;
   }
 
+  &__icon {
+    display: inline-flex;
+    padding: 2px;
+    background-color: var(--color-accent);
+    border-radius: var(--border-radius-l);
+    color: var(--color-white);
+  }
+
   @include hover {
     .link-card__image {
       scale: 1.1;
     }
-    .link-card__button {
+    .link-card__icon {
       background-color: var(--color-white);
       color: var(--color-black);
     }
