--- a/src/sections/Hero/Hero.scss
+++ b/src/sections/Hero/Hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  .grid {
+  &__grid {
     --gap: 20px;
 
     display: grid;
@@ -11,17 +11,13 @@
       row-gap: var(--gap);
     }
 
-    &__content {
-      height: 100%;
-    }
-
-    &__column {
+    &-column {
       display: flex;
       flex-direction: column;
       row-gap: var(--gap);
 
       &--large {
-        .grid__content {
+        .hero__grid-content {
           &--side {
             display: flex;
             gap: var(--gap);
@@ -31,7 +27,7 @@
       }
 
       &--small {
-        .grid__content {
+        .hero__grid-content {
           &--side {
             display: flex;
             flex-direction: column;
@@ -48,40 +44,13 @@
   }
 
   .slider {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 500px;
-
-    @include mobile {
-      height: 300px;
-    }
-
-    background-color: var(--color-grey);
     border-radius: var(--border-radius-l);
+    background-color: var(--color-accent-02);
 
-    &__swiper {
-      display: flex;
-      align-items: center;
-      row-gap: 30px;
-    }
-
-    &__navigation {
-      position: absolute;
-      width: 100%;
-      justify-content: space-between;
-      z-index: var(--z-index-under-background);
-
-      .slider-navigation__pagination {
-        position: absolute;
-        bottom: 0;
+    &-navigation {
+      &__pagination {
+        padding: fluid-to-laptop(30, 20);
       }
-    }
-
-    &__item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
   }
 }
